<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_heart_outline"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/calendar_month"
            android:title="@string/calendar"
            />
    </group>
</menu>