<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.farakhni.freatures.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <!-- Added action from nav_home to nav_ingredient -->
        <action
            android:id="@+id/action_nav_home_to_nav_ingredient"
            app:destination="@id/nav_ingredient" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.farakhni.freatures.favorite.FavoriteFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.farakhni.freatures.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_ingredient"
        android:name="com.example.farakhni.IngredientFragment"
        android:label="Meals">
        <argument
            android:name="meals"
            app:argType="com.example.farakhni.model.Meal[]" />
    </fragment>

</navigation>
